            - Granted access to the reserve() member function.
        Class Matrix:
            - New routine transpose().
            - New routines rowEchelonForm() and columnEchelonForm() for
              matrices over Regina's integer types (including MatrixInt).
            - New operator * for multiplying a matrix by a vector.
            - New routines combRows() and combCols().
            - New constructor that takes a hard-coded list of entries
              via a C++11 initialiser list.
            - New default constructor that leaves the matrix in an
              uninitialised state.
            - Added member and global swap() functions.
            - Several row and column operations now take an extra optional
              parameter to operate on only part of the row/column.
            - Renamed swapColumns() to swapCols().  The old name is kept
              as a deprecated alias.
            - Routine swapRows() is now constant time.
            - The type Matrix<bool> is now wrapped in Python under the name
              MatrixBool.
        Class Matrix2:
            - Added member and global swap() functions.
        Class MaxAdmissible:
            - Function enumerate() now returns by value, not by pointer.
        Class ModelLinkGraph:
            - Added a copy assignment operator.
            - Added a move constructor and move assignment operator.
            - Renamed swapContents() to swap(); the old name is now a
              deprecated alias.  Also added a global
              regina::swap(ModelLinkGraph&, ModelLinkGraph&).
            - Routine generateMinimalLinks() now uses a type-safe template-based
              mechanism for its callback function, instead of a function
              pointer with void* arguments, and the callback now takes its
              link by rvalue (not pointer).  Moreover, it no longer receives
              an extra null call once the enumeration has finished.